# WaveformAnalysis

./: .gitignore  CMakeLists.txt  README.md
RWF/: refwf_block_200.txt
include/: Calorimeter.h  ExponentialFitStrategy.h  GaussianFitStrategy.h  IWaveformFitStrategy.h  WaveformAnalyzer.h  WaveformFitContext.h  WaveformPreprocessor.h
src/: Calorimeter.cpp  ExponentialFitStrategy.cpp  GaussianFitStrategy.cpp  WaveformAnalyzer.cpp  WaveformFitContext.cpp  WaveformPreprocessor.cpp  exampleInterpolate.cpp  fitwf.cpp  main.cpp
tests/: CMakeLists.txt  MockWaveformFitStrategy.h  TestWaveformAnalyzer.cpp
